--- a/chess/src/css/board.css
+++ b/chess/src/css/board.css
@@ -1,19 +1,30 @@
+.display-board{
+    display: flex;
+    flex-direction: row;
+}
+
+
 .main-board{
-    width: 100%;
-    height: 100%;
+    width: 900px;
+    height: 900px;
+    margin: 10px;
 }
 
 .board-size{
     display: flex;
     flex-wrap:wrap;
-    margin: 50px auto 50px auto;
+    margin: 10px auto 10px auto;
 }
 
 .board-cell {
-    display: inline-block;
-    height:100px;    
-    width: calc(100% * (1/18) - 10px - 1px);
+   width: 45px;
+   height:45px;
     border: 1px solid pink;
+}
 
-   
+.display-info{
+    margin: 10px auto 50px auto;
+    height: 100px;
+    width: 100px;
+    border : 1px solid gold;
 }
